--- a/frontend/sass/_main.scss
+++ b/frontend/sass/_main.scss
@@ -1588,10 +1588,9 @@ header {
                 }
             }
         }
-    }
-    .sec4+.sec4 {
-        padding-top: 0;
-    }
+    } // .sec4+.sec4 {
+    //     padding-top: 0;
+    // }
     padding-top: 130px;
     .bg-rose {
         hr {
@@ -1607,6 +1606,91 @@ header {
         margin-top: 40px;
         .btn--custom {
             width: 160px;
+        }
+    }
+    .cart-section {
+        padding: 25px 0;
+        border-top: 1px solid $dark-grey;
+    }
+    .cart-section+.cart-section {
+        border-top: 1px solid #d7d6cc;
+        border-bottom: 1px solid #d7d6cc;
+    }
+    .cart-section:nth-child(1) {
+        border-top: 1px solid $dark-grey;
+    }
+    .heading-cart {
+        margin-bottom: 20px;
+        h3 {
+            font-family: 'pop-sb';
+        }
+        p {
+            font-family: 'work-sansSB';
+            margin-left: 16px;
+            text-transform: uppercase;
+            font-size: 20px;
+        }
+        .inblock {
+            vertical-align: middle;
+        }
+    }
+    .table-border {
+        border: 1px solid $dark-grey;
+    }
+    .cart-table {
+        .dis-tablecell {
+            vertical-align: top;
+        }
+        .form-group {
+            margin-bottom: 0;
+        }
+        .form-control {
+            background: transparent;
+            border: none;
+            font-family: 'work-sansSB';
+            font-size: 10px;
+            letter-spacing: 1px;
+            &::-webkit-input-placeholder {
+                font-family: 'work-sansSB';
+                font-size: 10px;
+                letter-spacing: 1px;
+            }
+        }
+        .btn--custom {
+            border: none;
+            border-left: 1px solid $dark-grey;
+        }
+        .padd25 {
+            padding: 10px 0 25px;
+            p {
+                font-family: 'work-sansSB'
+            }
+        }
+        .table {
+            thead,
+            tfoot {
+                font-family: 'pop-sb';
+            }
+            tbody {
+                font-family: 'pop-light';
+            }
+            thead,
+            tbody,
+            tfoot {
+                tr {
+                    th,
+                    td {
+                        border: none;
+                    }
+                    th:nth-child(2) {
+                        text-align: right;
+                    }
+                    td:nth-child(2) {
+                        text-align: right;
+                        font-family: 'pop-sb';
+                    }
+                }
+            }
         }
     }
 }
