--- a/frontend/views/content/product-description.html
+++ b/frontend/views/content/product-description.html
@@ -117,7 +117,7 @@
                                     <div class="checkbox">
                                         <input type="checkbox" id="0">
                                         <label for="0" class="lbl-subscribe">
-                                            Subscribe the Newsletter
+                                            Auto Replenish
                                         </label>
                                     </div>
                                 </div>
@@ -129,7 +129,6 @@
                                         </div>
                                     </form>
                                 </div>
-
                             </div>
                             <p class="head2">If used as indicated, this bottle will last 30 days.</p>
                         </div>
