--- a/frontend/sass/_main.scss
+++ b/frontend/sass/_main.scss
@@ -1694,3 +1694,10 @@ header {
         }
     }
 }
+
+.bg-blue-ds {
+    background: url("../img/Background.png"); // background: url(../img/home/our-story.jpg) no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 1000px;
+}
